# BlueKit2D

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  main.cpp
BlueKit2D/: CMakeLists.txt
BlueKit2D/src/: BlueGame.cpp  BlueGame.h  BlueKit2D.h
BlueKit2D/src/Components/: PhysicsObject.h  Sprite.h  Window.h
BlueKit2D/src/Core/: BlueBridge.h  BlueCompArray.h  BlueCompManager.h  BlueEntManager.h  BlueScene.h  BlueSceneManager.h  BlueSys.h
BlueKit2D/src/Systems/: PhysicsSystem.cpp  PhysicsSystem.h  SpriteSystem.cpp  SpriteSystem.h
TestGame/: CMakeLists.txt  Game  TemplateScene.h  TestGame  main.cpp  main.h
TestGame/Scenes/: SimpleScene.h  StressScene.h
TestGame/resources/: MCaniHIGH-Start_walk.json
inc/: BlueObj.h  main.h
src/: BlueGame.cpp  BlueGame.h  BlueObj.cpp  main.cpp  main.h
src/BECS/: BECS.cpp
src/Components/: PhysicsObject.h  Sprite.h  Transform.h  Window.h
src/Core/: BlueBridge.h  BlueCompArray.h  BlueCompManager.h  BlueEnt.h  BlueEntManager.h  BlueObj.cpp  BlueObj.h  BlueScene.h  BlueSceneManager.h  BlueSys.h  BlueSysManager.h  BlueTypes.h
src/Scenes/: SecondScene.h  SimpleScene.h  StressScene.h  TemplateScene.h
src/Systems/: GraphicsSystem.cpp  GraphicsSystem.h  PhysicsSystem.cpp  PhysicsSystem.h  SpriteSystem.cpp  SpriteSystem.h
user/: CMakeLists.txt  TemplateScene.h
user/Scenes/: StressScene.h
user/resources/: MCaniHIGH-Start_walk.json
